--- a/app/src/main/res/layout/business_storage_item.xml
+++ b/app/src/main/res/layout/business_storage_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:layout_marginTop="10dp"
-    android:id="@+id/item_product">
+    android:id="@+id/item_storage">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
