--- a/app/src/main/res/layout/business_button_storage.xml
+++ b/app/src/main/res/layout/business_button_storage.xml
@@ -86,6 +86,16 @@
         android:gravity="right">
 
         <ImageButton
+            android:id="@+id/fragment_button"
+            android:layout_width="64dp"
+            android:layout_height="58dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="fitCenter"
+            android:src="@drawable/business_ic_edit" />
+
+        <ImageButton
             android:id="@+id/edit_button"
             android:layout_width="60dp"
             android:layout_height="48dp"
