--- a/app/src/main/res/layout/business_order_edit_item.xml
+++ b/app/src/main/res/layout/business_order_edit_item.xml
@@ -92,6 +92,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
+        android:id="@+id/btn_Add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Thêm sản phẩm"
