--- a/app/src/main/res/layout/business_product_edit_item.xml
+++ b/app/src/main/res/layout/business_product_edit_item.xml
@@ -92,7 +92,7 @@
         android:layout_height="59dp"
         android:background="#B0C4C2C2"
         android:id="@+id/tv_product_edit_sl"
-        android:text="So luong"
+        android:text="So luong: 0"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/et_product_edit_ghichu"
@@ -103,7 +103,7 @@
         android:layout_height="59dp"
         android:background="#B0C4C2C2"
         android:id="@+id/tv_product_edit_daban"
-        android:text="Da ban"
+        android:text="Da ban: 0"
         android:textAlignment="center"
         android:layout_marginStart="25dp"
         app:layout_constraintTop_toTopOf="@id/tv_product_edit_sl"
@@ -115,7 +115,7 @@
         android:layout_height="59dp"
         android:background="#B0C4C2C2"
         android:id="@+id/tv_product_edit_tonkho"
-        android:text="Ton kho"
+        android:text="Ton kho: 0"
         android:textAlignment="center"
         android:layout_marginStart="25dp"
         app:layout_constraintTop_toTopOf="@id/tv_product_edit_daban"
