--- a/app/src/main/res/navigation/dn_mobile_navigation.xml
+++ b/app/src/main/res/navigation/dn_mobile_navigation.xml
@@ -62,11 +62,7 @@
     <fragment
         android:id="@+id/baoCaoFragment"
         android:name="com.example.piechart.uidn.FragmentButton.BaoCaoFragment"
-        android:label="BaoCaoFragment" >
-        <action
-            android:id="@+id/action_baoCaoFragment_to_reportFragment"
-            app:destination="@id/reportFragment" />
-    </fragment>
+        android:label="BaoCaoFragment" />
     <fragment
         android:id="@+id/caiDatFragment"
         android:name="com.example.piechart.uidn.FragmentButton.CaiDatFragment"
@@ -74,7 +70,11 @@
     <fragment
         android:id="@+id/khoHangFragment"
         android:name="com.example.piechart.uidn.FragmentButton.KhoHangFragment"
-        android:label="KhoHangFragment" />
+        android:label="KhoHangFragment" >
+        <action
+            android:id="@+id/action_khoHangFragment_to_storageFragment"
+            app:destination="@id/storageFragment" />
+    </fragment>
     <fragment
         android:id="@+id/nhaCungCapFragment"
         android:name="com.example.piechart.uidn.FragmentButton.NhaCungCapFragment"
@@ -88,8 +88,8 @@
         android:name="com.example.piechart.uidn.FragmentButton.ThongBaoFragment"
         android:label="ThongBaoFragment" />
     <fragment
-        android:id="@+id/reportFragment"
-        android:name="com.example.piechart.uidn.TabLayoutFragment.ReportFragment.ReportFragment"
-        android:label="ReportFragment" />
+        android:id="@+id/storageFragment"
+        android:name="com.example.piechart.uidn.TabLayoutFragment.Fragment.StorageFragment"
+        android:label="StorageFragment" />
 
 </navigation>
