--- a/app/src/main/res/layout/fragment_budget_overview.xml
+++ b/app/src/main/res/layout/fragment_budget_overview.xml
@@ -159,16 +159,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Thông tin thu nhập"
-                    android:textSize="15dp" />
+                    android:text="Thông tin thu nhập của bạn"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_height="match_parent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -188,6 +186,46 @@
 
             </LinearLayout>
 
+
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Thông tin chi tiêu của bạn"
+                android:textSize="15sp"
+                />
+        </LinearLayout>
+
+            <!-- Xây dựng chi tiêu cá nhân -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewExpenditure"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#333333"
+            android:padding="8dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tổng chi phí: -4,900,000.000 đ"
+                android:textColor="#FF0000"
+                android:textSize="20sp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="8dp"/>
+
+        </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
