--- a/app/src/main/res/layout/item_sub_salary.xml
+++ b/app/src/main/res/layout/item_sub_salary.xml
@@ -36,6 +36,7 @@
             android:gravity="right"
             >
             <TextView
+                android:id="@+id/tvMoneyTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Được cấp: "
@@ -43,7 +44,7 @@
                 />
 
             <TextView
-                android:id="@+id/tvAllowance"
+                android:id="@+id/tvMoney"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="500,000,000 đ"
