--- a/app/src/main/res/layout/business_employee_item.xml
+++ b/app/src/main/res/layout/business_employee_item.xml
@@ -1,76 +1,114 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/business_shape_white">
 
     <TextView
         android:id="@+id/employee_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mã nhân viên"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/employee_name"
+        app:layout_constraintBottom_toBottomOf="@id/employee_name"/>
 
     <TextView
         android:id="@+id/employee_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Tên nhân viên"
-        android:textColor="@android:color/black" />
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/employee_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bộ phận làm việc"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/employee_name"
+        app:layout_constraintStart_toStartOf="@id/employee_name"/>
 
     <TextView
         android:id="@+id/employee_rank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Cấp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/employee_room"
+        app:layout_constraintStart_toStartOf="@id/employee_name"/>
 
     <TextView
         android:id="@+id/employee_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Số điện thoại"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/employee_rank"
+        app:layout_constraintStart_toStartOf="@id/employee_name"/>
 
     <TextView
         android:id="@+id/employee_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Email"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="@id/employee_phone"
+        app:layout_constraintBottom_toBottomOf="@id/employee_phone"
+        app:layout_constraintStart_toStartOf="@id/employee_date"/>
 
     <TextView
         android:id="@+id/employee_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loại"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="@id/employee_rank"
+        app:layout_constraintBottom_toBottomOf="@id/employee_rank"
+        app:layout_constraintStart_toStartOf="@id/employee_date"/>
 
     <TextView
         android:id="@+id/employee_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tình trạng"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/employee_note"
+        app:layout_constraintBottom_toBottomOf="@id/employee_note"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/employee_evaluation"
+        android:id="@+id/employee_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Đánh giá"
-        android:textColor="@android:color/black" />
+        android:layout_marginBottom="1dp"
+        android:text="Ngày làm việc: DD/MM/YYYY"
+        android:layout_marginEnd="10dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="@id/employee_room"
+        app:layout_constraintBottom_toBottomOf="@id/employee_room"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/employee_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ghi chú"
-        android:textColor="@android:color/black" />
-</LinearLayout>
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/employee_phone"
+        app:layout_constraintStart_toStartOf="@id/employee_name"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
