--- a/app/src/main/res/layout/business_order_edit_item.xml
+++ b/app/src/main/res/layout/business_order_edit_item.xml
@@ -105,6 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/lv_order_edit_sp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_order_edit_listsp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
