--- a/app/src/main/res/layout/business_provider_item.xml
+++ b/app/src/main/res/layout/business_provider_item.xml
@@ -1,69 +1,102 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@drawable/business_shape_white">
 
     <TextView
         android:id="@+id/provider_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mã nhà cc"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/provider_name"
+        app:layout_constraintBottom_toBottomOf="@id/provider_name"/>
 
     <TextView
         android:id="@+id/provider_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tên nhà cc"
-        android:textColor="@android:color/black" />
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/provider_product_id"
+        android:id="@+id/provider_product_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Số sp cc"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/provider_phone"
+        app:layout_constraintStart_toStartOf="@id/provider_name"/>
 
     <TextView
         android:id="@+id/provider_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Số điện thoại"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/provider_head"
+        app:layout_constraintStart_toStartOf="@id/provider_name"/>
 
     <TextView
         android:id="@+id/provider_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Đại diện"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/provider_name"
+        app:layout_constraintStart_toStartOf="@id/provider_name"/>
 
     <TextView
         android:id="@+id/provider_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="Email"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toStartOf="@id/provider_date"
+        app:layout_constraintTop_toTopOf="@id/provider_phone"
+        app:layout_constraintBottom_toBottomOf="@id/provider_phone"/>
 
     <TextView
         android:id="@+id/provider_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ngày hợp tác"
-        android:textColor="@android:color/black" />
+        android:text="Ngày hợp tác: DD/MM/YYYY"
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/provider_head"
+        app:layout_constraintBottom_toBottomOf="@id/provider_head"/>
 
     <TextView
         android:id="@+id/provider_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tình trạng"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/provider_product_number"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/provider_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ghi chú"
-        android:textColor="@android:color/black" />
-</LinearLayout>
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/provider_product_number"
+        app:layout_constraintStart_toStartOf="@id/provider_name"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
