--- a/app/src/main/res/layout/business_supplier_edit_item.xml
+++ b/app/src/main/res/layout/business_supplier_edit_item.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_manhacc"
         android:hint="Mã nhà cung cấp"
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_tennhacc"
         android:hint="Tên nhà cung cấp"
@@ -34,16 +34,18 @@
         app:layout_constraintStart_toStartOf="@id/et_supplier_edit_manhacc"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_daidien"
         android:hint="Dai dien"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="@id/et_supplier_edit_tennhacc"
         app:layout_constraintStart_toEndOf="@id/et_supplier_edit_tennhacc"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_sdt"
         android:hint="So dien thoai"
@@ -51,7 +53,7 @@
         app:layout_constraintStart_toStartOf="@id/et_supplier_edit_manhacc"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_ghichu"
         android:hint="Ghi chú"
@@ -59,19 +61,23 @@
         app:layout_constraintStart_toStartOf="@id/et_supplier_edit_manhacc"/>
 
     <Spinner
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/sp_supplier_edit_tinhtrang"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@id/et_supplier_edit_ghichu"
         app:layout_constraintTop_toTopOf="@+id/et_supplier_edit_ghichu"
         app:layout_constraintBottom_toBottomOf="@id/et_supplier_edit_ghichu"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/sp_supplier_edit_email"
         android:hint="Email"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@id/et_supplier_edit_sdt"
         app:layout_constraintTop_toTopOf="@+id/et_supplier_edit_sdt"
         app:layout_constraintBottom_toBottomOf="@id/et_supplier_edit_sdt"
@@ -80,10 +86,12 @@
 
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_supplier_edit_ngay"
         android:hint="DD/MM/YYYY"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@id/et_supplier_edit_manhacc"
         app:layout_constraintTop_toTopOf="@+id/et_supplier_edit_manhacc"
         app:layout_constraintBottom_toBottomOf="@id/et_supplier_edit_manhacc"
@@ -114,6 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/lv_supplier_edit_sp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_supplier_edit_listsp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
